@@ -135,8 +135,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
 				<configuration>
-					<source>17</source>
-					<target>17</target>
+					<source>21</source>
+					<target>21</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -176,6 +176,7 @@
 					    --add-opens java.base/java.util.concurrent=ALL-UNNAMED
 					    --add-opens java.base/java.net=ALL-UNNAMED
 					    --add-opens java.base/java.text=ALL-UNNAMED
+					    --add-opens java.sql/java.sql=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
